# fair-med

./: .dockerignore  .env.example  .gitignore  API_REQUIREMENTS.md  DEPLOY.md  Dockerfile  README.md  SETUP_GUIDE.md  app.py  fetch_ncci_latest.py  load_billing_rules.py  load_real_cms_data.py  load_supabase.py  package-lock.json  package.json  pnpm-lock.yaml  requirements.txt  server.py  test_pdf_download.py  test_pipeline.py  tsconfig.tsbuildinfo  verify_setup.py
agents/: __init__.py  _common.py  auditor.py  factchecker.py  graph.py  parser.py  pricing.py  researcher.py  state.py  triage.py  writer.py
app/: globals.css  layout.tsx  page.tsx
app/api/analyze/: route.ts
app/history/: page.tsx
backend/: main.py  pyproject.toml
components/: agent-workflow.tsx  analysis-pipeline.tsx  bill-input.tsx  error-findings.tsx  header.tsx  pricing-table.tsx  results-panel.tsx  results-summary.tsx
components/ui/: button.tsx  textarea.tsx
frontend/: .env.example  API_REQUIREMENTS.md  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: agent-workflow.tsx  bill-input.tsx  dispute-letter.tsx  header.tsx  results-panel.tsx
frontend/components/ui/: button.tsx  card.tsx  tabs.tsx  toaster.tsx
frontend/lib/: types.ts  utils.ts
k8s/: deployment.yaml  ingress.yaml  namespace.yaml  service.yaml
lib/: types.ts  utils.ts
prompts/: auditor.md  factchecker.md  parser.md  pricing.md  researcher.md  triage.md  writer.md
tools/: __init__.py  billing_rules.py  db.py  icd10_lookup.py  medicare_pricing.py  web_search.py
